add carousel section

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,10 @@
+@import "flyonui/variants.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-
     /* Original styles */
     .text-primary {
         @apply text-gray-800;
